--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,22 +18,27 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.AppCompat.Light"
             app:layout_scrollFlags="scroll|enterAlways" />
-        <android.support.design.widget.TabLayout
-            android:textSize="16sp"
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:layout_marginBottom="48dp"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
+    <android.support.design.widget.TabLayout
+        android:textSize="16sp"
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabTextColor="@color/antiquewhite"
+        app:tabSelectedTextColor="@color/royalblue"
+        app:tabBackground="@color/seagreen"
+        android:layout_gravity="end|bottom"
+        />
 
     <!--<android.support.design.widget.FloatingActionButton-->
     <!--android:id="@+id/fab_toChat"-->
