--- a/app/src/main/res/layout/fragment_propagate.xml
+++ b/app/src/main/res/layout/fragment_propagate.xml
@@ -1,10 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.zju.app.tutormall.fragments.PropagateFragment">
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <com.daimajia.slider.library.SliderLayout
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/propagate_slider_height"
+        android:id="@+id/propagate_slider"
+        app:layout_scrollFlags="scroll|enterAlways"/>
 
-</FrameLayout>
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/propagate_course_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
