--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -147,4 +147,5 @@
     <color name="navy">#000080</color><!--海军色 -->
     <color name="black">#000000</color><!--黑色 -->
     <color name="maingreen">#61d888</color>
+    <color name="mainblue">#5d9cec</color>
 </resources>
