--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -36,7 +37,7 @@
         android:layout_height="wrap_content"
         app:tabTextColor="@color/antiquewhite"
         app:tabSelectedTextColor="@color/royalblue"
-        app:tabBackground="@color/seagreen"
+        app:tabBackground="@color/maingreen"
         android:layout_gravity="end|bottom"
         />
 
