--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.zju.app.tutormall.LoginActivity"
+    tools:context="com.zju.app.tutormall.RegisterActivity"
+    android:id="@+id/register_root"
     android:background="@drawable/login_page">
 
     <EditText
