--- a/app/src/main/res/layout/course_list_card_item.xml
+++ b/app/src/main/res/layout/course_list_card_item.xml
@@ -14,6 +14,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+           android:paddingRight="10dp"
             style="@style/Widget.CardContent">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="@dimen/card_item_avatar_size"
@@ -31,16 +32,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="陈铭业陈铭业陈铭业陈铭业陈铭业"
+                android:text="陈名也"
                 android:id="@+id/teacher_info"
-                android:maxWidth="50dp"
                 android:textSize="@dimen/list_item_text_medium"
                 android:maxLines="1"
                 android:textColor="@color/darkgray"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="7dp"
+                android:layout_marginStart="18dp"
                 android:layout_below="@+id/avatar"
-                android:layout_alignEnd="@+id/avatar" />
+                android:layout_alignParentStart="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,8 +48,9 @@
                 android:textSize="@dimen/list_item_text_large"
                 android:id="@+id/course_info"
                 android:textColor="@color/black"
-                android:layout_marginTop="21dp"
-                android:layout_marginStart="25dp"
+                android:maxLines="2"
+                android:layout_marginTop="14dp"
+                android:layout_marginStart="20dp"
                 android:layout_alignTop="@+id/vertical_divider"
                 android:layout_toEndOf="@+id/vertical_divider" />
             <TextView
@@ -58,9 +59,18 @@
                 android:text="Schedule info"
                 android:textSize="@dimen/list_item_text_small"
                 android:textColor="@color/lightgray"
+                android:maxLines="3"
                 android:id="@+id/schedule_info"
-                android:layout_alignTop="@+id/teacher_info"
+                android:layout_below="@+id/avatar"
                 android:layout_alignStart="@+id/course_info" />
+
+            <ImageView
+                android:layout_width="@dimen/card_item_avatar_size"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:src="@drawable/stars"
+                android:layout_alignBottom="@+id/vertical_divider"
+                android:layout_toStartOf="@+id/vertical_divider" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
