--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -1,10 +1,174 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.zju.app.tutormall.fragments.MyInfoFragment">
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="center_horizontal"
+    android:background="@color/whitesmoke">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/avatar"
+        android:src="@drawable/bg011"
+        android:layout_marginTop="@dimen/large_margin"/>
 
-</FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/dimgray"
+        android:id="@+id/user_name"
+        android:text="陈铭业"
+        android:textSize="@dimen/list_item_text_large"
+        android:layout_marginTop="@dimen/small_margin"/>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/large_margin">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="用户名"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/list_item_text_midlarge"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:textColor="@color/dimgray"
+            android:id="@+id/user_name_form"
+            android:textSize="@dimen/list_item_text_medium"
+            android:text="陈铭业"/>
+     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/tiny_margin">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="注册邮箱"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/list_item_text_midlarge"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:textColor="@color/dimgray"
+            android:id="@+id/user_email"
+            android:textSize="@dimen/list_item_text_medium"
+            android:text="vkazas@163.com"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/tiny_margin">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="其他信息"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/list_item_text_midlarge"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:textColor="@color/silver"
+            android:id="@+id/user_info"
+            android:textSize="@dimen/list_item_text_medium"
+            android:background="@color/white"
+            android:textColorHint="@color/lightgray"
+            android:hint="其他信息"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/large_margin">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="支付宝账户"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/list_item_text_midlarge"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:textColor="@color/silver"
+            android:id="@+id/user_payid"
+            android:textSize="@dimen/list_item_text_medium"
+            android:background="@color/white"
+            android:textColorHint="@color/lightgray"
+            android:hint="mypay"/>
+    </LinearLayout>
+
+    <Button
+        android:layout_width="@dimen/card_item_width"
+        android:layout_height="45dp"
+        android:text="绑定"
+        android:id="@+id/bind_pay"
+        android:textColor="@color/white"
+        android:textSize="@dimen/list_item_text_large"
+        android:background="@color/maingreen"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/small_margin"/>
+
+    <Button
+        android:layout_width="@dimen/card_item_width"
+        android:layout_height="45dp"
+        android:text="登出"
+        android:id="@+id/logout_btn"
+        android:textColor="@color/white"
+        android:textSize="@dimen/list_item_text_large"
+        android:background="@color/red"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/small_margin"/>
+</LinearLayout>
