--- a/app/src/main/res/layout/fragment_propagate.xml
+++ b/app/src/main/res/layout/fragment_propagate.xml
@@ -3,6 +3,7 @@
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/whitesmoke"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.daimajia.slider.library.SliderLayout
@@ -14,6 +15,7 @@
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/propagate_course_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/whitesmoke"/>
 
 </LinearLayout>
