--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/add_course"
+        android:title="新增课程"
+        android:orderInCategory="100" app:showAsAction="always"
+        android:icon="@drawable/add_course"
+        android:visible="false"/>
+
     <item android:id="@+id/search_course"
         android:title="@string/search_title"
         android:icon="@drawable/bg011"
